# willow

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
include/willow/: willow.h
include/willow/conf/: config.h  parser.h
include/willow/err/: err.h  err_codes.inc
include/willow/io/: io.h
include/willow/lexer/: lexer.h  lexer_utils.h  string_lexer.h  token_definitions.inc  tokens.h
include/willow/sys/: env.h
include/willow/test/: test.h
src/willow/: willow.c
src/willow/conf/: config.c  parser.c
src/willow/err/: err.c
src/willow/io/: io.c
src/willow/lexer/: lexer.c  lexer_utils.c  string_lexer.c  tokens.c
src/willow/sys/: env.c
src/willow/test/: test.c
tests/: CMakeLists.txt  test_conf_add_kvp.c  test_conf_dispose.c  test_io_read_file.c  test_lexer_is_at_end.c  test_sys_env_var.c
